--- a/classroom/src/styles.css
+++ b/classroom/src/styles.css
@@ -12,6 +12,12 @@ body {
   margin: 0;
 }
 
+.cluster_id {
+  display: none;
+  background: lightgrey;
+  border: 1px solid grey;
+  padding: 3px;
+}
 .cluster_default {
   border-bottom-style: solid;
   border-bottom-width: 3px;
@@ -20,32 +26,32 @@ body {
 .cluster_0 {
   border-bottom-style: solid;
   border-bottom-width: 3px;
-  border-bottom-color: rgb(255,0,32);
+  border-bottom-color: rgba(255,0,32,0.7);
 }
 .cluster_1 {
   border-bottom-style: solid;
   border-bottom-width: 3px;
-  border-bottom-color: rgb(255,172,0);
+  border-bottom-color: rgba(255,172,0,0.7);
 }
 .cluster_2 {
   border-bottom-style: solid;
   border-bottom-width: 3px;
-  border-bottom-color: rgb(119,189,11);
+  border-bottom-color: rgba(119,189,11,0.7);
 }
 .cluster_3 {
   border-bottom-style: solid;
   border-bottom-width: 3px;
-  border-bottom-color: rgb(49,117,230);
+  border-bottom-color: rgba(49,117,230,0.7);
 }
 .cluster_4 {
   border-bottom-style: solid;
   border-bottom-width: 3px;
-  border-bottom-color: rgb(137,80,224);
+  border-bottom-color: rgba(137,80,224,0.7);
 }
 .cluster_5 {
   border-bottom-style: solid;
   border-bottom-width: 3px;
-  border-bottom-color: rgb(220,10,169);
+  border-bottom-color: rgba(220,10,169,0.7);
 }
 .selected_text {
   background-color: pink;
@@ -54,6 +60,7 @@ body {
 /* scatterplot */
 circle.dot {
   fill: skyblue;
+  filter: opacity(60%);
   cursor: pointer;
 }
 
@@ -64,3 +71,6 @@ circle.dot.model {
 .patterns .panel-title {
   font-size: 11px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
